# agent_self_database

./: .env.example  .gitignore  README.md  pyproject.toml
src/pk_agent/: claude_api.py  config.py  latest_frame.py  logutil.py  main.py  proactive.py
src/pk_agent/capture/: screenshot.py  visual_context.py  win_focus.py
src/pk_agent/gating/: cloud_gate.py
src/pk_agent/generation/: cloud_llm.py  rag.py
src/pk_agent/notify/: popup.py
src/pk_agent/pipeline/: ingest.py
src/pk_agent/storage/: db.py  vector.py
